--- a/CPP/notebook.ipynb
+++ b/CPP/notebook.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.499333\n"
+      "Balance: 0.482305%\n",
+      "Compression ratio: 1.33964%\n"
      ]
     }
    ],
@@ -22,16 +23,65 @@
     "\n",
     "\n",
     "\n",
-    "with open('./output.txt', mode='r') as f:\n",
+    "with open('./outputs/output.txt', mode='r') as f:\n",
     "    r = f.read()\n",
-    "    print(r.count(\"1\")/len(r))\n",
+    "    print(\"Balance: {}%\".format(r.count(\"1\")/len(r)))\n",
     "    w, h = int(math.sqrt(len(r))), int(math.sqrt(len(r)))\n",
-    "    d = np.array([int(c)*255 for c in r if c in [\"0\", \"1\"]], dtype=np.uint8).reshape(h,w)\n",
+    "    d = np.array([int(c)*255 for c in r[:w*h] if c in [\"0\", \"1\"]], dtype=np.uint8).reshape(h,w)\n",
     "\n",
     "\n",
     "# Make into PIL Image and save\n",
     "PILimage = Image.fromarray(d)\n",
-    "PILimage.save('NW_2_RS_q8_2.png')"
+    "name = 'outputs/NW_local_enc_l32_4.png'\n",
+    "PILimage.save(name)\n",
+    "\n",
+    "print(\"Compression ratio: {}%\".format((os.path.getsize(name)*8)/(w*h)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compression ratio: 1.004148978003194%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# png from bytes\n",
+    "\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from PIL import Image\n",
+    "import math\n",
+    "import random\n",
+    "# Define width and height\n",
+    "\n",
+    "\n",
+    "\n",
+    "with open('./outputs/output.txt', mode='r') as f:\n",
+    "    r = f.read()\n",
+    "    # r = [str(random.randint(0, 1)) for c in r]\n",
+    "    arr_bytes = []\n",
+    "    for i in range(0, len(r), 8):\n",
+    "        arr_bytes.append(0)\n",
+    "        for j in r[i: i+8]:\n",
+    "            arr_bytes[i//8] = (arr_bytes[i//8] << 1) + int(j)\n",
+    "    r = arr_bytes\n",
+    "    w, h = int(math.sqrt(len(r))), int(math.sqrt(len(r)))\n",
+    "    d = np.array(r[:w*h], dtype=np.uint8).reshape(h,w)\n",
+    "\n",
+    "\n",
+    "# Make into PIL Image and save\n",
+    "PILimage = Image.fromarray(d)\n",
+    "name = 'outputs/tmp.png'\n",
+    "PILimage.save(name)\n",
+    "\n",
+    "print(\"Compression ratio: {}%\".format((os.path.getsize(name))/(w*h)))"
    ]
   },
   {
